Distinct command with rawData translates namespace too early

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2025-02-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      With SERVER-97427, the distinct command with rawData translates the namespace before acquiring any resources on the collection. This means it is possible for a concurrent time-series collection creation to sneak in after we've decided to not do the translation.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: