SERVER-99888 Perform `rawData` translation for `distinct` later (#31693)

GitOrigin-RevId: 9b7609b09dd5eea8849622be37322567cbbc5bd9